tests/ui/borrowck/borrowck-imm-ref-to-mut-rec-field-issue-3162-c.stderr
error[E0506]: cannot assign to `_a` because it is borrowed
  --> $DIR/borrowck-imm-ref-to-mut-rec-field-issue-3162-c.rs:6:9
   |
LL |     let b = &mut _a;
   |             ------- borrow of `_a` occurs here
...
LL |         _a = 4;
   |         ^^^^^^ assignment to borrowed `_a` occurs here
...
LL |     drop(b);
   |          - borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
